tools/tests/errors/return_annotation_violation.experr
function must return Integer, got String
